# hytale-style-checker

./: .gitignore  README.md  main.py  pyproject.toml  web_example.html
docs/: index.html
docs/onnx_model/: metadata.json  model.onnx
